# backend_tasks

./: .gitignore  README.md
databases/: README.md
databases/Simple_Table/: CMakeLists.txt  README.md  main.cpp  schema.sql
databases/User_Manager/: CMakeLists.txt  README.md  schema.sql
databases/User_Manager/src/: main.cpp
databases/User_Manager/src/database/: Database.cpp  Database.h
databases/User_Manager/src/service/: UserService.cpp  UserService.h
kafka/: README.md
kafka/kafka_async/: CMakeLists.txt  README.md  docker-compose.yml
kafka/kafka_async/src/: Async_Kafka_Consumer.cpp  Async_Kafka_Consumer.h  Async_Kafka_Producer.cpp  Async_Kafka_Producer.h  main.cpp
kafka/kafka_demo/: CMakeLists.txt  README.md
kafka/kafka_demo/src/: Kafka_Consumer.cpp  Kafka_Consumer.h  Kafka_Producer.cpp  Kafka_Producer.h  main.cpp
multithreading/: README.md
multithreading/Blocking_Queue/: CMakeLists.txt  README.md  main.cpp
multithreading/Concurrent_LRU_Cache/: CMakeLists.txt  README.md  main.cpp
multithreading/Lock_Free_Queue/: CMakeLists.txt  README.md  main.cpp
multithreading/Logger/: CMakeLists.txt  README.md  main.cpp
multithreading/Striped_Unordered_Map/: CMakeLists.txt  README.md  main.cpp
multithreading/Thread_Pool/: CMakeLists.txt  README.md  main.cpp
networking/: README.md
networking/echo_server/: CMakeLists.txt  README.md  main.cpp
networking/http_server/: CMakeLists.txt  README.md  main.cpp
networking/websocket_chat/: CMakeLists.txt  README.md  main.cpp
redis/: README.md
redis/redis_demo/: CMakeLists.txt  README.md
redis/redis_demo/src/: http_server.cpp  http_server.h  main.cpp  redis_client.cpp  redis_client.h
